[package]
name = "donut-live"
version = "0.1.0"
edition = "2021"

[dependencies]
artem = "3.0.0"
bincode = "1.3.3"
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.5"
gif = "0.13.1"
httparse = "1.9.4"
image = { version = "0.25.2", default-features = false, features = [
    "rayon",
    "gif",
] }
indicatif = { version = "0.17.8", features = ["rayon"] }
log = "0.4.22"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = "0.11.15"
zstd = "0.13.2"

[profile.release]
lto = true
codegen-units = 1
